Changed learning to use list of lemmas instead of single lemmas.